<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salario_bruto" />

        <EditText
            android:id="@+id/edit_sal_bruto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numero_dependentes" />

        <EditText
            android:id="@+id/edit_num_dep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/plano_saude" />

        <RadioGroup
            android:id="@+id/group_plan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
           android:id="@+id/p1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/plano1"/>


            <RadioButton
            android:id="@+id/p2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plano2"/>


            <RadioButton
            android:id="@+id/p3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plano3"/>

            <RadioButton
            android:id="@+id/p4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plano4"/>

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/outros"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/VT"/>

        <RadioGroup
            android:id="@+id/radioVt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/sim_vt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sim" />

            <RadioButton
                android:id="@+id/nao_vt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nao" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/VA"/>

        <RadioGroup
            android:id="@+id/radioVa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/sim_va"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sim" />


            <RadioButton
                android:id="@+id/nao_va"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nao" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/VR"/>

        <RadioGroup
            android:id="@+id/radioVr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/sim_vr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sim" />

            <RadioButton
                android:id="@+id/nao_vr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nao">

            </RadioButton>

        </RadioGroup>

        <Button
            android:id="@+id/calc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Calcular"/>


    </LinearLayout>
</ScrollView>